prusti-tests/tests/verify/ui/pledges.stderr
error: [Prusti: verification error] statement might panic
  --> $DIR/pledges.rs:33:5
   |
33 |     assert!(a.f == 6);
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

